# uv2nix_hammer

./: .gitignore  LICENSE  README.md  faq.md  flake.nix  pyproject.toml
src/uv2nix_hammer/: __init__.py  flake.template.nix  helpers.py  nix_format.py  rules.py
